--- a/database.ini
+++ b/database.ini
@@ -1,6 +1,13 @@
-[redshift]
+[redshift-gba]
 host=redshift-cluster-1.cjtsvnr1c5fa.ap-south-1.redshift.amazonaws.com
-database=dev
+database=gba
+user=awsuser
+password=Awsadmin1
+port=5439
+
+[redshift-stagedb]
+host=redshift-cluster-1.cjtsvnr1c5fa.ap-south-1.redshift.amazonaws.com
+database=stagedb
 user=awsuser
 password=Awsadmin1
 port=5439
